WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153285
http://victordarras.fr/cssgame/
doesn't work in Safari.
https://bugs.webkit.org/show_bug.cgi?id=153285
Summary
http://victordarras.fr/cssgame/ doesn't work in Safari.
alan
Reported
2016-01-20 14:11:14 PST
1. Load
http://victordarras.fr/cssgame/
2. Start the game -> Red box shows up right away.
Attachments
Patch
(9.42 KB, patch)
2016-01-20 14:15 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(9.49 KB, patch)
2016-01-20 14:16 PST
,
alan
thorton
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews100 for mac-yosemite
(740.45 KB, application/zip)
2016-01-20 15:08 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews113 for mac-yosemite
(787.78 KB, application/zip)
2016-01-20 15:19 PST
,
Build Bot
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2016-01-20 14:11:40 PST
rdar://problem/24212369
alan
Comment 2
2016-01-20 14:15:13 PST
Created
attachment 269383
[details]
Patch
alan
Comment 3
2016-01-20 14:16:09 PST
Created
attachment 269384
[details]
Patch
Build Bot
Comment 4
2016-01-20 15:08:01 PST
Comment on
attachment 269384
[details]
Patch
Attachment 269384
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/718728
New failing tests: svg/clip-path/hittest-clip-path-reference-hit.html
Build Bot
Comment 5
2016-01-20 15:08:04 PST
Created
attachment 269393
[details]
Archive of layout-test-results from ews100 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 6
2016-01-20 15:18:58 PST
Comment on
attachment 269384
[details]
Patch
Attachment 269384
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/718754
New failing tests: svg/clip-path/hittest-clip-path-reference-hit.html
Build Bot
Comment 7
2016-01-20 15:19:00 PST
Created
attachment 269394
[details]
Archive of layout-test-results from ews113 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews113 Port: mac-yosemite Platform: Mac OS X 10.10.5
alan
Comment 8
2016-01-20 19:50:55 PST
Committed
r195397
: <
http://trac.webkit.org/changeset/195397
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug