http://victordarras.fr/cssgame/ doesn't work in Safari. https://bugs.webkit.org/show_bug.cgi?id=153285 <rdar://problem/24212369>

Reviewed by Tim Horton.

This patch adds support for hittesting ClipPathOperation::Reference.

Source/WebCore:

Tests: svg/clip-path/hittest-clip-path-reference-miss.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::nodeAtPoint):
* rendering/RenderObject.h:
(WebCore::RenderObject::isSVGResourceClipper):
* rendering/svg/RenderSVGResourceClipper.h:
(isType):

LayoutTests:

* svg/clip-path/hittest-clip-path-reference-miss-expected.html: Added.
* svg/clip-path/hittest-clip-path-reference-miss.html: Added.

Canonical link: https://commits.webkit.org/171374@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195397 268f45cc-cd09-0410-ab3c-d52691b4dbfc